@@ -13,6 +13,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- Fixed flaw in findTag() in maptemplate.c that prevented multiple tags on the same line 
+  being processed under certain conditions. (#2633)
+
 - Return results even when extents are missing (#2420)
 
 - Avoid displaying OGR connection strings in error messages (#2629)
